# pacdoor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/pacdoor/: __init__.py  __main__.py  cli.py
src/pacdoor/agent/: __init__.py  adaptive.py  campaign.py  config.py  daemon.py  scheduler.py
src/pacdoor/core/: attack_graph.py  attack_scorer.py  checkpoint.py  connection_pool.py  correlator.py  engine.py  events.py  fact_store.py  models.py  module_registry.py  planner.py  profiles.py  rate_limiter.py  safety.py  scan_diff.py  scope.py  target_profiler.py
src/pacdoor/data/: default_creds.json
src/pacdoor/data/wordlists/: passwords-top1000.txt
src/pacdoor/db/: database.py  schema.sql
src/pacdoor/modules/: base.py
src/pacdoor/modules/enum/: cloud_enum.py  dns_enum.py  ftp_enum.py  http_enum.py  ldap_enum.py  mongo_enum.py  mssql_enum.py  mysql_enum.py  redis_enum.py  smb_enum.py  snmp_enum.py  ssh_enum.py
src/pacdoor/modules/exploit/: adcs_exploit.py  cloud_privesc.py  container_escape.py  credential_spray.py  db_exploits.py  kerberoast.py  kerberos_abuse.py  ntlm_coerce.py  ssh_brute.py
src/pacdoor/modules/post/: ad_enum.py  adcs_enum.py  cred_harvest.py  dacl_abuse.py  dcsync.py  dpapi_extract.py  edr_evasion.py  gpp_extract.py  hash_crack.py  lateral_move.py  lsass_dump.py  privesc_enum.py  ssh_pivot.py  verified_proof.py
src/pacdoor/modules/recon/: host_discovery.py  nmap_scan.py  os_detect.py  port_scan.py  screenshot.py  service_detect.py  udp_scan.py  wifi_recon.py
src/pacdoor/modules/vuln/: api_fuzzer.py  cve_checker.py  default_creds.py  http_vulns.py  nuclei_scan.py  smb_vulns.py  sqlmap_scan.py  template_scanner.py  tls_vulns.py  web_vulns.py
src/pacdoor/report/: attack_map.py  bloodhound.py  compliance.py  generator.py  prioritizer.py
src/pacdoor/report/templates/: report.html.j2
src/pacdoor/templates/vulns/cves/: cve-2019-0708.yaml  cve-2020-1472.yaml  cve-2020-14882.yaml  cve-2021-21972.yaml  cve-2021-26855.yaml  cve-2021-34473.yaml  cve-2021-44228.yaml  cve-2022-22963.yaml  cve-2022-26134.yaml  cve-2022-41040.yaml  cve-2023-22515.yaml  cve-2023-27997.yaml  cve-2023-44487.yaml  (+2 more)
src/pacdoor/tui/: __init__.py  app.py  theme.tcss  widgets.py
src/pacdoor/updater/: manager.py
(+35 files in other folders)
